tests/ui/generic-associated-types/issue-87258_b.stderr
error: item does not constrain `Helper::{opaque#0}`
  --> $DIR/issue-87258_b.rs:21:8
   |
LL |     fn foo<'a>() -> Self::FooFuture<'a> {
   |        ^^^
   |
   = note: consider removing `#[define_opaque]` or adding an empty `#[define_opaque()]`
note: this opaque type is supposed to be constrained
  --> $DIR/issue-87258_b.rs:16:49
   |
LL | type Helper<'xenon, 'yttrium, KABOOM: Trait2> = impl Trait1;
   |                                                 ^^^^^^^^^^^

error: aborting due to 1 previous error

